# scanfc

./: LICENSE  README.md  clustering_suppl_functions.py  pyproject.toml  requirements.txt  scanfc_clustering_example.ipynb  scanfc_suppl_functions.py  scanofc.py  scanofc_clustering_example.ipynb  simulation_study_1.py  simulation_study_2.py
Data/: Table_LINAC.xlsx  Table_SARRP.xlsx
Simulations/: README.md  sim_means.csv  simulation_functions.py  simulation_study_1.py  simulation_study_2.py  simulation_study_2_FDA.R
Simulations & Example/: simulation_study_1.py
Simulations & Examples/: simulation_study_1.py  simulation_study_2.py
Simulations/.ipynb_checkpoints/: scanfc_clustering_example-checkpoint.ipynb
src/scanfc/: __init__.py  clustering.py
